Added basic responsive layout

--- a/index.html
+++ b/index.html
@@ -9,39 +9,42 @@
 </head>
 <body>
 <main>
-    <div class="container horizontal header">
+    <div class="container horizontal wrap">
         <h1>Hospital activity dashboard</h1>
-        <div class="dropdown-wrapper dates">
-            <label for="date-from">Date from</label>
-            <select name="dateFrom" id="date-from" aria-controls="summary-episodes-span"></select>
-        </div>
-        <div class="dropdown-wrapper dates">
-            <label for="date-to">Date to</label>
-            <select name="dateTo" id="date-to"></select>
+        <div class="container horizontal dates-group">
+            <div class="dropdown-wrapper">
+                <label for="date-from">Date from</label>
+                <select name="dateFrom" id="date-from"></select>
+            </div>
+            <div class="dropdown-wrapper">
+                <label for="date-to">Date to</label>
+                <select name="dateTo" id="date-to"></select>
+            </div>
         </div>
     </div>
-    <div class="container horizontal dropdowns">
-        <!-- Need label ID for DC dropdowns -->
-        <div class="dropdown-wrapper">
-            <label id="board-dropdown-label">Health Board</label>
-            <div id="board-dropdown" class="dropdown"></div>
-        </div>
-        <div class="dropdown-wrapper">
-            <label id="hospital-dropdown-label">Hospital</label>
-            <div id="hospital-dropdown" class="dropdown"></div>
+    <div class="container horizontal wrap">
+        <div class="container horizontal locations-group">
+            <div class="dropdown-wrapper">
+                <label id="board-dropdown-label">Health Board</label>
+                <div id="board-dropdown" class="dropdown"></div>
+            </div>
+            <div class="dropdown-wrapper">
+                <label id="hospital-dropdown-label">Hospital</label>
+                <div id="hospital-dropdown" class="dropdown"></div>
+            </div>
         </div>
         <div class="container horizontal summary-numbers">
             <div class=container>
                 <label>Episodes</label>
-                <div id="summary-episodes" class="summary-number" tabindex=0 role="main" aria-label="Total number of episodes"></div>
+                <div id="summary-episodes" tabindex=0 role="main" aria-label="Total number of episodes"></div>
             </div>
             <div class=container>
                 <label>Bed Days</label>
-                <div id="summary-bed-days" class="summary-number" tabindex=0 role="main" aria-label="Total number of bed days"></div>
+                <div id="summary-bed-days" tabindex=0 role="main" aria-label="Total number of bed days"></div>
             </div>
             <div class=container>
                 <label>Avlos</label>
-                <div id="summary-avlos" class="summary-number" tabindex=0 role="main" aria-label="Average length of stay"></div>
+                <div id="summary-avlos" tabindex=0 role="main" aria-label="Average length of stay"></div>
             </div>        
         </div>
     </div>
@@ -51,7 +54,7 @@
     <div class="container">
         <div id="line-chart" class="chart-wrapper"></div>
         <div id="row-chart" class="chart-wrapper"></div>
-        <div class="container vertical">
+        <div class="container">
             <h2>Table that reflects chart selections</h2>
             <div class="table-wrapper" tabindex=0>
                 <div id="viz-table" class="table table-hover"></div>
