--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <div class="container horizontal summary-numbers">
             <div class=container>
                 <label>Episodes</label>
-                <div id="summary-episodes" tabindex=0 role="main" aria-label="Total number of episodes"></div>
+                <div id="summary-episodes" role="main" aria-label="Total number of episodes"></div>
             </div>
             <div class=container>
                 <label>Bed Days</label>
-                <div id="summary-bed-days" tabindex=0 role="main" aria-label="Total number of bed days"></div>
+                <div id="summary-bed-days" role="main" aria-label="Total number of bed days"></div>
             </div>
             <div class=container>
                 <label>Avlos</label>
-                <div id="summary-avlos" tabindex=0 role="main" aria-label="Average length of stay"></div>
+                <div id="summary-avlos" role="main" aria-label="Average length of stay"></div>
             </div>        
         </div>
     </div>
@@ -64,7 +64,7 @@
     <br>
     <p>Source: <a aria-label="Dashboard data source is Scottish Health and Social Care Open Data" href="https://www.opendata.nhs.scot/dataset/inpatient-and-daycase-activity">Scottish Health and Social Care Open Data</a></p>
 </main>
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter2/1.5.2/crossfilter.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 <script src="/js/dc.js"></script>
